--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">CovidTracker</string>
-    <string name="track_countries">Track Countries</string>
+    <string name="track_countries">Track Indian District</string>
     <string name="total_cases">Total Cases</string>
     <string name="recovered">Recovered</string>
     <string name="deaths">Deaths</string>
@@ -18,4 +18,5 @@
     <string name="country_name">Country Name</string>
     <string name="flag">Flag</string>
     <string name="country">Country</string>
+    <string name="corona_tracker">Corona Tracker</string>
 </resources>
